force-app/main/default/objects/ApprovalEvent__e/ApprovalEvent__e.object-meta.xml
<CustomObject>
    <description>Objet &quot;Plateform Event&quot; afin de récupérer les événements des processus d&apos;approbation afin de les approuver/désactiver en mode Admin</description>
    <label>Évènement processus approbation</label>
    <pluralLabel>Évènements processus approbation</pluralLabel>
</CustomObject>