force-app/main/default/objects/ApprovalEvent__e/fields/action__c.field-meta.xml
<CustomField>
    <fullName>action__c</fullName>
    <description>Action à effectuer sur le processus d&apos;approbation : 
- Removed = Rappel
- Approve = Approuvé
- Reject = Refusé</description>
    <label>Action</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>