force-app/main/default/objects/ApprovalEvent__e/fields/comment__c.field-meta.xml
<CustomField>
    <fullName>comment__c</fullName>
    <label>Commentaire</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>