force-app/main/default/objects/ApprovalEvent__e/fields/otherId__c.field-meta.xml
<CustomField>
    <fullName>otherId__c</fullName>
    <description>Id d&apos;un autre enregistrement utile pour exécution du processus</description>
    <label>Autre Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>