force-app/main/default/objects/ApprovalEvent__e/fields/processInstanceWorkitemId__c.field-meta.xml
<CustomField>
    <fullName>processInstanceWorkitemId__c</fullName>
    <description>Id de l&apos;instance de l&apos;approbation</description>
    <label>Id instance</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>