force-app/main/default/objects/ApprovalEvent__e/fields/recordId__c.field-meta.xml
<CustomField>
    <fullName>recordId__c</fullName>
    <description>Id de l&apos;enregistrement lié au processus d&apos;approbation</description>
    <label>Id enregistrement</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>